# llms-txt-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: fix-multiple-llms-txt-formats-support-plan.md  implementation-plan.md
src/: parser.py  server.py
src/llms_txt_mcp/: __init__.py  server.py
src/llms_txt_mcp/parsers/: __init__.py  format_detector.py  parser.py
tests/: __init__.py  conftest.py  test_format_detection.py  test_parsers.py  test_server.py  test_token_counting.py
tests/fixtures/: ai-sdk-dev-llms.txt  docs-docker-com-llms.txt  hono-dev-llms-full.txt  invalid_multiple_h1.llms.txt  invalid_no_title.llms.txt  large.llms.txt  nextjs-org-docs-llms-full.txt  orm-drizzle-team-llms-full.txt  vercel-com-docs-llms-full.txt  zod-dev-llms-full.txt
